--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
-    compile 'com.beardedhen:androidbootstrap:1.1.1'
+    compile 'com.beardedhen:androidbootstrap:+'
     compile 'com.jakewharton:butterknife:6.1.0'
 }
